# Bolt

./: .gitignore  CMakeLists.txt  README.md  bolt.cpp  make.sh
LibBolt/: Block.cpp  Block.h  Compiler.cpp  Compiler.h  Expression.cpp  Expression.h  Function.cpp  Function.h  Instruction.cpp  Instruction.h  List.cpp  List.h  Object.h  Parser.cpp  Parser.h  Scaler.cpp  Scaler.h  String.cpp  String.h  Symbol.cpp  Symbol.h  Tokenizer.cpp  Tokenizer.h
examples/: 01_add.bolt  02_var.bolt  03_while.bolt  04_print.bolt  05_global_var.bolt  06_func.bolt  07_func2.bolt  08_func_with_loop.bolt  09_func_with_func_call.bolt  10_func_with_func_call2.bolt  11_print_str.bolt  11_string.bolt  12_hello_world.bolt  12_string.bolt
